--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Api",
-    "slug": "Api",
+    "name": "ApiUbademy",
+    "slug": "ApiUbademy",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
