--- a/app.json
+++ b/app.json
@@ -23,7 +23,9 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/ubademyLogo.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.ubademy",
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "favicon": "./assets/favicon.png"
