--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native-stack": "^6.2.2",
     "expo": "~42.0.1",
     "expo-checkbox": "~1.0.3",
+    "expo-google-sign-in": "~9.2.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
