--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@react-navigation/native-stack": "^6.2.2",
     "expo": "~42.0.1",
     "expo-checkbox": "~1.0.3",
-    "expo-location": "~12.1.2",
     "expo-google-sign-in": "~9.2.1",
+    "expo-intent-launcher": "~9.1.0",
+    "expo-location": "~12.1.2",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "react": "16.13.1",
