--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-google-sign-in": "~9.2.1",
     "expo-intent-launcher": "~9.1.0",
     "expo-location": "~12.1.2",
+    "expo-notifications": "~0.12.3",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "react": "16.13.1",
