--- a/package.json
+++ b/package.json
@@ -8,33 +8,33 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.15.14",
-    "@react-native-picker/picker": "1.16.1",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-picker/picker": "2.1.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.2",
-    "expo": "~42.0.1",
-    "expo-checkbox": "~1.0.3",
-    "expo-google-sign-in": "~9.2.1",
-    "expo-intent-launcher": "~9.1.0",
-    "expo-location": "~12.1.2",
-    "expo-notifications": "~0.12.3",
-    "expo-status-bar": "~1.0.4",
+    "expo": "^43.0.0",
+    "expo-checkbox": "~2.0.0",
+    "expo-google-sign-in": "~10.0.3",
+    "expo-intent-launcher": "~10.0.3",
+    "expo-location": "~13.0.4",
+    "expo-notifications": "~0.13.3",
+    "expo-status-bar": "~1.1.0",
     "firebase": "8.2.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
     "react-native-gifted-chat": "^0.16.3",
-    "react-native-maps": "0.28.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-web": "~0.13.12"
+    "react-native-maps": "0.28.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
-    "typescript": "~4.0.0"
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
+    "typescript": "~4.3.5"
   },
   "private": true
 }
